--- a/src/components/SideBar/SideBar.css
+++ b/src/components/SideBar/SideBar.css
@@ -1,62 +1,82 @@
 .sidebar {
-    width: 60px;
-    background-color: #2c3e50;
-    color: white;
-    transition: width 0.3s ease;
-    overflow: hidden;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding-top: 10px;
-  }
-  
-  .sidebar.open {
-    width: 200px;
-    align-items: flex-start;
-    padding: 10px;
-  }
-  
-  .toggle-btn {
-    background: none;
-    border: none;
-    color: white;
-    font-size: 24px;
-    cursor: pointer;
-  }
-  
-  .menu {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-  }
-  
-  .menu-btn {
-    white-space: nowrap;
-    background-color: transparent;
-    border: none;
-    color: white;
-    text-align: left;
-    padding: 10px 15px;
-    cursor: pointer;
-    font-size: 16px;
-  }
-  
-  .menu-btn:hover {
-    background-color: #34495e;
-  }
+  width: 60px;
+  background-color: #2c3e50;
+  color: white;
+  transition: width 0.3s ease;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 10px;
+}
 
-  .botoes-side-bar{
-    display: flex;
-    width: 100%;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-  }
+.sidebar.open {
+  width: 200px;
+  align-items: flex-start;
+  padding: 10px;
+}
 
-  .homeBtn {
-    background: none;
-    border: none;
-    color: white;
-    font-size: 24px;
-    cursor: pointer;
-  }
+.toggle-btn {
+  background: none;
+  border: none;
+  color: white;
+  font-size: 24px;
+  cursor: pointer;
+}
+
+.menu {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+
+.menu-btn {
+  white-space: nowrap;
+  background-color: transparent;
+  border: none;
+  color: white;
+  text-align: left;
+  padding: 10px 15px;
+  cursor: pointer;
+  font-size: 16px;
+}
+
+.menu-btn:hover {
+  background-color: #34495e;
+}
+
+.botoes-side-bar {
+  display: flex;
+  width: 100%;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.homeBtn {
+  background: none;
+  border: none;
+  color: white;
+  font-size: 24px;
+  cursor: pointer;
+}
+.submenu {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  margin-left: 10px;
+}
+
+.submenu-btn {
+  background-color: transparent;
+  border: none;
+  color: white;
+  text-align: left;
+  padding: 8px 25px;
+  font-size: 15px;
+  cursor: pointer;
+}
+
+.submenu-btn:hover {
+  background-color: #3b4a5a;
+}
