--- a/src/screens/signin/Signin.css
+++ b/src/screens/signin/Signin.css
@@ -58,3 +58,10 @@
 .signin-form button:hover {
   background-color: #0056b3;
 }
+
+.error-message {
+  color: red;
+  margin-bottom: 1rem;
+  text-align: center;
+  font-size: 0.95rem;
+}
